# sandbox

./: .gitignore  CMakeLists.txt  README.md  time_test.cpp
ConsoleTest/: ConsoleTest.sln
ConsoleTest/ConsoleTest/: ConsoleTest.cpp  ConsoleTest.vcxproj  ConsoleTest.vcxproj.filters
proto_test/addressbook_consumer/: CMakeLists.txt
proto_test/addressbook_consumer/source/: proto_test.cpp
proto_test/addressbook_producer/: CMakeLists.txt
ttstl/: CMakeLists.txt
ttstl/include/ttstl/: custom_allocator.h  deferred.h  event.h  exclusive_while.h  exponential_backoff.h  hash.h  likely.h  list_to_string.h  locked_queue.h  observable.h  observable_impl.h  observable_pimpl.h  platform.h  read_write_locks.h  ring_buffer.h  sha.h  spin_lock.h  sstream.h  string.h  stringbuf.h  task_queue.h  thread_name.h  ticket_lock.h  uuid.h  uuid_hash.h  vector_set.h  waitable_queue.h
ttstl/test/: test_exponential_backoff.build.mk  test_exponential_backoff.cpp  test_string.build.mk  test_string.cpp  test_vector_set.build.mk  test_vector_set.cpp
ttstl/test/gtest/: ttstring_test.cpp
